added ST logo to practice area dropdown and to top right corner of main landing page nav bar

--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
               <ul class="dropdown">
                 <li><a href="#" id="dropdown-USsecurities">Securities Class Actions</a></li>
                 <li><a href="#" id="dropdown-globalsecurities">Global Shareholder Litigation</a></li>
-                  <!-- <li><a href="#">Mergers & Acquisitions</a></li>
-                  <li><a href="#">Shareholder Derivative</a></li> -->
+                <li><a href="#">Trust & Fiduciary Litigation</a></li>
+                <li><a href="#">Direct & Opt-Out Actions</a></li>
                   <li><a href="#">Consumer Fraud & Antitrust</a></li>
-                  <li><a href="#" id="dropdown-corporategov">Corporate Governance + M&A Litigation</a></li>
-                  <li><a href="#" id="dropdown-whistleblower">Whistleblower Representation</a></li>
+                  <li><a href="#" id="dropdown-corporategov">Corporate Governance & M&A Litigation</a></li>
+                  <li><a href="#">Abitration</a></li>
+                  <li><a href="#" id="dropdown-whistleblower">Whistleblower Representation</a></li><br>
+                  <li><img src="assets/images/unnamed.png" id="ST-logo-main"></li>
                 </ul>
             </li>
 
