added ST logo to the main landing page nav bar and added it to the dropdown for practice areas

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <li><a href="#" id="dropdown-corporategov">Corporate Governance & M&A Litigation</a></li>
                   <li><a href="#">Abitration</a></li>
                   <li><a href="#" id="dropdown-whistleblower">Whistleblower Representation</a></li><br>
-                  <li><img src="assets/images/unnamed.png" id="ST-logo-main"></li>
+                  <li><img src="assets/images/unnamed2.png" id="ST-logo-main"></li>
                 </ul>
             </li>
 
