added the ST logo to the main landing page nav bar as well as the dropdown for practice areas

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <ul class="dropdown">
                 <li><a href="#" id="dropdown-USsecurities">Securities Class Actions</a></li>
                 <li><a href="#" id="dropdown-globalsecurities">Global Shareholder Litigation</a></li>
-                <li><a href="#">Trust & Fiduciary Litigation</a></li>
+                <li><a href="#">Fiduciary Litigation</a></li>
                 <li><a href="#">Direct & Opt-Out Actions</a></li>
                   <li><a href="#">Consumer Fraud & Antitrust</a></li>
                   <li><a href="#" id="dropdown-corporategov">Corporate Governance & M&A Litigation</a></li>
