--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <div class="about-us" data-aos="fade-left" id="about">
 
       <article>
-        <h2>Who We Are</h2>test
+        <h2>Who We Are</h2>
         <p>KTMC is one of the world’s foremost advocates in protecting the public against corporate fraud and other wrongdoing.  Our lawyers regularly take on the foremost defense attorneys — and win — in class actions, shareholder derivative suits, antitrust litigation and other complex litigation around the globe. We are proud to have recovered billions of dollars for our clients.<div id="about-us-read">LEARN MORE</div></p>
       </article>
     
