--- a/newcases.html
+++ b/newcases.html
@@ -153,28 +153,28 @@
                 <td>NYSE</td>
                 <td>PEN</td>
                 <td>52</td>
-                <td id="GoodRX1" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+                <td id="GoodRX1" style="color: rgb(255, 123, 0)"><a>Learn More</td></a>
               </tr>
               <tr>
                 <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
                 <td>NYSE</td>
                 <td>QS</td>
                 <td>44</td>
-                <td id="GoodRX1" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+                <td id="GoodRX1" style="color: rgb(255, 123, 0)"><a>Learn More</td></a>
               </tr>
               <tr>
                 <td>Restaurant Brands International Inc.</td>
                 <td>NYSE</td>
                 <td>QSR</td>
                 <td>27</td>
-                <td id="GoodRX1" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+                <td id="GoodRX1" style="color: rgb(255, 123, 0)"><a>Learn More</td></a>
               </tr>
               <tr>
                 <td>Splunk Inc.</td>
                 <td>NASDAQ</td>
                 <td>SPLK</td>
                 <td>10</td>
-                <td id="GoodRX1" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
+                <td id="GoodRX1" style="color: rgb(255, 123, 0)"><a>Learn More</td></a>
               </tr>
             </tbody>
           </table>
