--- a/settledcases.html
+++ b/settledcases.html
@@ -146,77 +146,77 @@
                 <td>Adeptus Health Inc.</td>
                 <td>June 25, 2014 - March 1, 2017</td>
                 <td>$44,000,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>June 8, 2020</td>
               </tr>
               <tr>
                 <td>Banco Bradesco S.A.</td>
                 <td>August 8, 2014 - July 27, 2016</td>
                 <td>$14,500,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>December 21, 2019</td>
               </tr>
               <tr>
                 <td>Citibank ADR<br> Capital Acquisition Corp.</td>
                 <td>January 1, 2006 - September 4, 2018</td>
                 <td>$14,750,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>August 12, 2019</td>
               </tr>
               <tr>
                 <td>Dole Food Company, Inc. (2013)</td>
                 <td>June 11, 2013 - November 1, 2013</td>
                 <td>$113,293,838.30</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td></td>
               </tr>
               <tr>
                 <td>Endo International PLC</td>
                 <td>November 30, 2012 - June 8, 2017</td>
                 <td>$82,500,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>February 7, 2020</td>
               </tr>
               <tr>
                 <td>Insys Therapeutics, Inc. – Defendant Babich Settlement</td>
                 <td>March 3, 2015 - January 25, 2016</td>
                 <td>$250,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>November 7, 2020</td>
               </tr>
               <tr>
                 <td>Insys Therapeutics, Inc. - Defendant Baker Settlement</td>
                 <td>March 3, 2015 - January 25, 2016</td>
                 <td>$2,000,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>September 12, 2020</td>
               </tr>
               <tr>
                 <td>JPMorgan ADR FX</td>
                 <td>November 21, 2010 - July 18, 2018; November 21, 2012 - July 18, 2018</td>
                 <td>$9,500,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>September 19, 2019</td>
               </tr>
               <tr>
                 <td>SeaWorld Entertainment, Inc.</td>
                 <td>August 29, 2013 - August 12, 2014</td>
                 <td>$65,000,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>July 16, 2020</td>
               </tr>
               <tr>
                 <td>Snap Inc.</td>
                 <td>March 2, 2017 - August 10, 2017</td>
                 <td>$154,687,500</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>January 25, 2021</td>
               </tr>
               <tr>
                 <td>The Bank of New York Mellon ADR FX</td>
                 <td>January 1, 1997 - January 17, 2019</td>
                 <td>$72,500,000</td>
-                <td style="color: rgb(247, 99, 0);"><a>PDF</a></td>
+                <td style="color: rgb(255, 123, 0)"><a>PDF</a></td>
                 <td>August 15, 2019</td>
               </tr>
             </tbody>
